--- a/countdown.html
+++ b/countdown.html
@@ -36,7 +36,7 @@
                     
                     <div class="video-container mb-5">
                         <div class="memory-video-placeholder mb-3">
-                            <video controls width="100%" height="300">
+                            <video controls width="100%">
                                 <source src="us/kissing.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
@@ -53,7 +53,7 @@
                     
                     <div class="video-container mb-5">
                         <div class="memory-video-placeholder mb-3">
-                            <video controls width="100%" height="300">
+                            <video controls width="100%">
                                 <source src="us/babby-boy.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
