--- a/memories.html
+++ b/memories.html
@@ -38,7 +38,7 @@
                                 <div class="col-md-4">
                                     <div class="memory-card card h-100">
                                         <div class="memory-video-placeholder">
-                                            <video controls width="100%" height="250">
+                                            <video controls width="100%">
                                                 <source src="us/1.mp4" type="video/mp4">
                                                 Your browser does not support the video tag.
                                             </video>
@@ -57,7 +57,7 @@
                                 <div class="col-md-4">
                                     <div class="memory-card card h-100">
                                         <div class="memory-video-placeholder">
-                                            <video controls width="100%" height="250">
+                                            <video controls width="100%">
                                                 <source src="us/2.mp4" type="video/mp4">
                                                 Your browser does not support the video tag.
                                             </video>
@@ -76,7 +76,7 @@
                                 <div class="col-md-4">
                                     <div class="memory-card card h-100">
                                         <div class="memory-video-placeholder">
-                                            <video controls width="100%" height="250">
+                                            <video controls width="100%">
                                                 <source src="us/3.mp4" type="video/mp4">
                                                 Your browser does not support the video tag.
                                             </video>
